# recipe_search_agent

./: README.md  langgraph.json  pyproject.toml
Chapter01/: OpenAI_sdk.py
Chapter02/: LangChain01.py  LangChain_message.py  init_model.py  langchain_tools.py  long_memory.py  memory_checkpoint.py  multi_message.py  summarize_memory.py  tavily_tool.py
Chapter02/resources/: database.db
app/: main.py
app/agents/: Recipe_Search.py
app/api/v1/: chat.py
app/static/: index.html
app/static/_next/static/chunks/: c13dc4b283c0c8d9.css
db/: Recipes.db
